--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "node build/server.js"
+    "start": "node build/server.js",
+    "serve": "npm run build && npm start"
   },
   "type": "module"
 }
