--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
     "@flydotio/dockerfile": "^0.4.8",
     "@flydotio/node-demo": "^0.1.9",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.5.7",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
+    "peer": "^1.0.1",
+    "peerjs": "^1.5.0"
   },
   "scripts": {
     "build": "tsc",
