--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7",
-    "peer": "^1.0.1",
-    "peerjs": "^1.5.0"
+    "path": "^0.12.7"
   },
   "scripts": {
     "build": "tsc",
-    "start": "node build/server.js",
+    "start": "node -r dotenv/config build/server.js",
     "serve": "npm run build && npm start"
   },
   "type": "module"
